--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Fernando Leonid">
     <meta name="description" content="spinner loader">
     <link rel="stylesheet" href="./spinner.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="spinner black"></div>
