--- a/index.html
+++ b/index.html
@@ -1,18 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>spinner loader</title>
-    <meta name="author" content="Fernando Leonid">
-    <meta name="description" content="spinner loader">
     <link rel="stylesheet" href="./spinner.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="spinner black"></div>
-    <div class="spinner blue"></div>
-    <div class="spinner green"></div>
-    <div class="spinner red"></div>
+    <header>
+        Spinner loader
+    </header>
+    <main>
+        <div> <div class="spinner"></div> </div>
+        <div> <div class="spinner-dual"></div> </div>
+        <div> <div class="spinner-fast"></div> </div>
+        <div> <div class="spinner-triple"></div> </div>
+
+        <div>
+            <div class="spinner">
+                <div class="spinner">
+                    <div class="spinner"></div>
+                </div>
+            </div>
+        </div>
+
+        <div> 
+            <div class="spinner-dual">
+                <div class="spinner-dual"></div>
+            </div>
+        </div>
+
+        <div>
+             <div class="spinner-fast">
+                <div class="spinner-fast">
+                    <div class="spinner-fast">
+                        <div class="spinner-fast"></div>
+                    </div>
+                </div>
+             </div>
+        </div>
+
+        <div> 
+            <div class="spinner-triple">
+                <div class="spinner-triple">
+                    <div class="spinner-triple"></div>
+                </div>
+            </div> 
+        </div>
+
+    </main>
+    
+    <footer>
+        Spinner loader by Fernando Leonid
+    </footer>
 </body>
 </html>
